Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19398

[FTS] Forestdb assertion "hbmeta.prefix != __null' fails, cbft crashes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 4.5.0
    • 4.5.0
    • forestdb
    • None

    Description

      Build
      4.5.0-2394

      Testcase
      ./testrunner -i INI_FILE.ini get-cbcollect-info=True,get-coredumps=True,get-logs=False,stop-on-failure=False,GROUP=P0 -t fts.moving_topology_fts.MovingTopFTS.erl_crash_on_kv_during_index_building,items=30000,cluster=D,F,F,GROUP=P0

      This is not going to be consistently reproducible. Same test ran fine on earlier builds but doesn't mean this is a regression.

      [2016-04-27 09:15:27,909] - [fts_base:2343] INFO - assertion failed [hbmeta.prefix != NULL] at /home/couchbase/jenkins/workspace/watson-unix/forestdb/src/hbtrie.cc:1230 ((nil) != 0x7f02d941c230)
      [2016-04-27 09:15:27,909] - [fts_base:2343] INFO - Breakpad caught a crash in forestdb. Writing crash dump to ./113f8670-9f11-b626-13808195-31d7a897.dmp before terminating.
      [2016-04-27 09:15:27,909] - [fts_base:2343] INFO - [goport] 2016/04/27 09:14:36 /opt/couchbase/bin/cbft terminated: signal: aborted (core dumped)
      

      GDBing into core generated from breakpad dump, I see:

      (gdb) bt
      #0  0x00007f03102ea625 in raise () from /lib64/libc-2.12.so
      #1  0x00007f03102ebe05 in abort () from /lib64/libc-2.12.so
      #2  0x00007f03108bc94d in fdb_assert_die (expression=Unhandled dwarf expression opcode 0xf3
      ) at /home/couchbase/jenkins/workspace/watson-unix/forestdb/utils/debug.cc:186
      #3  0x00007f03108a4665 in _hbtrie_find (trie=Unhandled dwarf expression opcode 0xf3
      ) at /home/couchbase/jenkins/workspace/watson-unix/forestdb/src/hbtrie.cc:1230
      #4  0x00007f03108a4fa1 in hbtrie_find (trie=0x7f02d941c230, rawkey=Unhandled dwarf expression opcode 0xf3
      ) at /home/couchbase/jenkins/workspace/watson-unix/forestdb/src/hbtrie.cc:1352
      #5  0x00007f031089a132 in fdb_get (handle=0x7f02d9412380, doc=0x7f02bf20d1e0) at /home/couchbase/jenkins/workspace/watson-unix/forestdb/src/forestdb.cc:2967
      #6  0x00007f0310872ec5 in fdb_get_kv (handle=0x7f02d9412380, key=0xc8251e1ae3, keylen=Unhandled dwarf expression opcode 0xf3
      ) at /home/couchbase/jenkins/workspace/watson-unix/forestdb/src/api_wrapper.cc:69
      #7  0x0000000000dcb557 in _cgo_3fe29c8698dc_Cfunc_fdb_get_kv (v=0xc820a93228) at /home/couchbase/jenkins/workspace/watson-unix/godeps/src/github.com/couchbase/goforestdb/kv.go:83
      #8  0x0000000000471b90 in runtime.asmcgocall () at /home/couchbase/.cbdepscache/exploded/x86_64/go-1.6/go/src/runtime/asm_amd64.s:582
      #9  0x0000000000000008 in ?? ()
      #10 0x000000c820a931a8 in ?? ()
      #11 0x000000000041528a in runtime.cgocall (fn=0xc82001e000, arg=0x0, ~r2=612404992) at /home/couchbase/.cbdepscache/exploded/x86_64/go-1.6/go/src/runtime/cgocall.go:110
      #12 0x0000000000444990 in runtime.startTheWorldWithSema () at /home/couchbase/.cbdepscache/exploded/x86_64/go-1.6/go/src/runtime/proc.go:983
      #13 0x000000c82001e000 in ?? ()
      #14 0x0000000000000000 in ?? ()
      

      Breakpad dmp file, generated core are uploaded.
      *Note: *only a single crash was observed in this case.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              apiravi Aruna Piravi (Inactive)
              apiravi Aruna Piravi (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              11 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty