MB-19398: Detect file handle sharing among multiple threads

fdb_commit() and fdb_compact() cannot share the same file
handle when invoked simultaneously from multiple threads.
Doing so can corrupt their root handle's docio readbuffer
causing various assertions/crashes. Detect this and return
HANDLE_BUSY error.

Change-Id: I04434449b7f57ab4e8f2b7f060f416684c13f46c
Reviewed-on: http://review.couchbase.org/63432
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>